--- a/WebContent/bookedsuccess.html
+++ b/WebContent/bookedsuccess.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet"
-href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-crossorigin="anonymous">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
 
 <head>
 <style>
-
 body {
 	background-image: url("image/success.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 1400px 700px;
 	padding-top: 80px;
-}
-h2
-{
-color: green;
-font-size:50px;
+	text-align: center;
 }
 
-<meta charset="ISO-8859-1">
-<title>Booked</title>
+h2 {
+	color: green;
+	font-size: 50px;
+}
+<
+meta
+ 
+charset
+="ISO-8859-1"
+>
+<
+title
+>
+Booked
+</title
+>
 </style>
 </head>
 <body>
-<center><h2>Booked Successfully</h2>
-<br>
-<br>
-<form action="login.html">
-<center><button type="submit" class="btn btn-success" style="width : 100px">LOGOUT</button></center>
-</form>
+	
+		<h2>Booked Successfully</h2>
+		<br> <br>
+		<form action="choose.jsp">
+				<button type="submit" class="btn btn-success" style="width: 100px">HOME</button>
+		</form>
 </body>
 </html>
