--- a/WebContent/success.html
+++ b/WebContent/success.html
@@ -2,20 +2,20 @@
 <html>
 <head>
 <link rel="stylesheet"
-href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-crossorigin="anonymous">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
 
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 <style>
-
 body {
 	background-image: url("image/login.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 1400px 800px;
 }
+
 .display {
 	position: absolute;
 	top: 37%;
@@ -33,10 +33,12 @@ form {
 </style>
 </head>
 
-<h1>DETAILS UPADTED SUCCESSFULLY</h1><br>
-<h3>Any Details do you want to add</h3><br>
-<a href=admin.jsp><h4>YES</h4></a>
-<a href="choose.jsp"><h4>NO</h4></a>
+<h1>DETAILS UPADTED SUCCESSFULLY</h1>
+<br>
+<h3>Any Details do you want to add</h3>
+<br>
+<h4><a href=admin.jsp>YES</a></h4>
+<h4><a href="choose.jsp">>NO</a></h4>
 
 </body>
 </html>
