--- a/WebContent/failure.html
+++ b/WebContent/failure.html
@@ -25,8 +25,7 @@ form {
 </style>
 </head>
 <body>
-<body bgcolor="red">
-Enter correct details
+<body bgcolor="red">Enter correct details
 </body>
 </body>
 </html>
