--- a/WebContent/forgetpassword.html
+++ b/WebContent/forgetpassword.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet"
-href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-crossorigin="anonymous">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
 <meta charset="ISO-8859-1">
 <title>ForgetPassword</title>
 <style>
@@ -13,13 +13,22 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 1400px 800px;
-	padding-left:430px;
-	padding-top: 230px;
+	padding-left: 370px;
+	padding-top: 60px;
 }
-.display {
-	position: absolute;
-	top: 37%;
-	left: 22%;
+
+body {
+	padding-left: 330px;
+	padding-top: 170px;
+	font-size: 20px;
+}
+
+h3 {
+	color: black;
+}
+
+h4 {
+	color: black;
 }
 
 form {
@@ -27,39 +36,52 @@ form {
 }
 </style>
 </head>
-<body bgcolor="white">
-<form method="post" action="ForgetPasswordServlet">
+<body style="color: white; font-family: Times New Roman; font-size: 19px">
+	<form method="post" action="ForgetPasswordServlet">
 		<table>
 			<tbody>
-				<tr >
-				<td align="left"><h4>Email :</h4></td>
-					<td><input type="email" name="email"></td>
-
+				<tr align="left">
+					<td style="color: black"><h4>Email :</h4></td>
+					<td><input type="text" name="email" required></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr align="left">
+					<td style="color: black"><h4>Security question :</h4></td>
+					<td><select name="question">
+							<option value="-1">-------------Choose-------------</option>
+							<option value="school">Which school you studied?</option>
+							<option value="nicname">what is your nic name?</option>
+							<option value="city">what is your favourite city?</option>
+					</select></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr align="left">
+					<td style="color: black"><h4>Security answer :</h4></td>
+					<td><input type="text" name="answer" required></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-				<td align="left"><h4>New Password :</h4></td>
+					<td align="left"><h4>New Password :</h4></td>
 					<td><input type="password" name="newpassword"></td>
 
 				</tr>
 				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				</tbody>
-				</table>
-				<table align="center">			
-				<td> <button type="submit" class="btn btn-success" style="width : 100px">CHANGE</button>
-			
-						<br></td>
-				</tr>
-				</table>
+					<td>&nbsp;</td></tr>
+			<tr align = "center">
+				<td>
+					<button type="submit" class="btn btn-success" style="width: 100px">CHANGE</button>
+				</td>
+			</tr>
+			</tbody>
+		</table>
 
-</form>
+	</form>
 
 </body>
 </html>
